# vrpn-release

./: 0001-also-install-cmake-config.patch  0001-customize-debian-rules-files.patch  0002-Revert-customize-debian-rules-files.patch  0002-set-options-with-cache.patch  0003-remove-cmake-sets.patch  0003-set-python3-python2-build-to-false.patch  0004-Revert-remove-cmake-sets.patch  0005-set-python3-python2-build-to-false.patch  README.md  debian.store  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules  rules.em
foxy/: package.xml
rpm/: ros-humble-vrpn.spec  ros-rolling-vrpn.spec  template.spec
