<?xml version="1.0"?>
<package>
  <name>vrpn</name>
  <version>:{version}</version>
  <description>The VRPN is a library and set of servers that interfaces with virtual-reality systems, such as VICON, OptiTrack, and others.</description>
  <author>Russell M. Taylor</author>
  <author>Sensics</author>
  <license>BSD</license>
  <url type="website">https://github.com/vrpn/vrpn/wiki</url>

  <maintainer email="alvinsunyixiao@gmail.com">Alvin Sun</maintainer>

  <buildtool_depend>cmake</buildtool_depend>

  <run_depend>catkin</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
